2000-08-04  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_crypto.c: Use NTP_KEYSDIR 

	* util/ntp-genkeys.c (snifflink): Ignore ENOENT, too.

	* ntpd/ntp_proto.c (peer_xmit): Crypto cleanup
	* ntpd/ntp_crypto.c: Cleanup
	* ntpd/ntp_control.c: Join the club
	* ntpd/ntp_config.c: Call crypto_config() instead; we got rid of
	crypto_flags.
	* include/ntp_crypto.h (CRYPTO_FLAG_ENAB): New crypto flags, rework
	* include/ntp_control.h (CS_FLAGS): Wiggle in.
	* include/ntp.h: Added crypto peer status to struct peer
	From Dave Mills

2000-08-03  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c: Initialize path_keysdir to NTP_KEYSDIR.

	* configure.in (NTP_KEYSDIR): Added
	* acinclude.m4: Added AC_DEFINE_DIR macro

	* util/ntp-genkeys.c (main): Sanity checks on the file paths.

2000-08-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (crypto_config): Only #ifdef PUBKEY
	(PATH_MAX): Try harder...

2000-08-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (main): Use snifflink()
	(snifflink): Implement...

	* configure.in: Check for readlink()

2000-07-31  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (main): Use strdup on the tokens returned
	from ntp_config...
	(crypto_config): Fix a typo...
	(crypto_config): Even more...
	(usage): Flesh it out.

	* include/ntp_config.h: 
	* ntpd/ntp_config.c: Move a whack of #defines to ntp_config.h so
	ntp-genkeys.c can see them, too.

	* util/ntp-genkeys.c: Add stubs to work with ../ntpd/ntp_config.o,
	start hooking things up.
	(main): debugging
	(crypto_config): better implementation
	

	* ntpd/ntp_config.c (getconfig): 
	* ntpd/ntpd.c: Initialize "debug" here, not in ntp_config.c

	* util/Makefile.am (ntp_genkeys_LDADD): Added ../ntpd/ntp_config.o
	* util/Makefile.am (ntp_genkeys_DEPENDENCIES): Added.

2000-07-30  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k4
	* util/ntp-genkeys.c: Start hacking for new functionality.